--- a/index.html
+++ b/index.html
@@ -17,10 +17,70 @@
 </head>
 
 <body>
-    <header>
+    <header class="sticky-top">
         <!-- Logo + nombre -->
-        <a href="#"><img src="./medios/marcalogocolor.png" alt="logo Salud de la Nueva Era"></a> <!-- menú principal -->
-        <nav class=" menuPrincipal">
+
+        <nav class="navbar navbar-expand-lg menuPrincipal">
+            <div class="">
+                <a class="navbar-brand" href="#">
+                    <img src="./medios/logo.png" alt="Logo" width="40" class="">
+                    Salud Nueva Era
+                </a>
+            </div>
+            <!-- menu central & burger -->
+            <div class="botonMenu">
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse menuPrincipal" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page"
+                                href="./pages/expositores.html">Expositores</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/clases.html">Clases</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/talleres.html">Talleres</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- menu lateral -->
+            <div class="menuSecundario">
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Login / Registro</button>
+
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
+                    aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="nav flex-column">
+                            <li>
+                                <a href="./pages/cuenta.html">Cuenta</a>
+                            </li>
+                            <li>
+                                <a href="./pages/checkout.html">Checkout</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </nav>
+
+        <!-- <a href="#"><img src="./medios/marcalogocolor.png" alt="logo Salud de la Nueva Era"></a> menú principal -->
+        <!--         <nav class=" menuPrincipal">
             <ul>
                 <li><a href="./pages/expositores.html">Expositores</a>
                 </li>
@@ -34,9 +94,9 @@
                     <a href="./pages/contacto.html">Contacto</a>
                 </li>
             </ul>
-        </nav>
+        </nav> -->
         <!-- menú secundario -->
-        <nav class="menuSecundario">
+        <!--<nav class="menuSecundario">
             <ul>
                 <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Login / Registro</button>
@@ -61,7 +121,7 @@
                 </div>
 
             </ul>
-        </nav>
+        </nav> -->
 
     </header>
     <main>
@@ -93,21 +153,23 @@
         </section>
         <!-- mensajes de las personas en carrusel -->
         <section class=" container-xl">
-            <h2>Testimonios</h2>
 
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active w-100">
-                    <img src="./medios/testimonios/testimonio1.svg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item w-100">
-                    <img src="./medios/testimonios/testimonio2.svg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item w-100">
-                    <img src="./medios/testimonios/testimonio3.svg" class="d-block w-100" alt="...">
-                  </div>
+            <div id="carouselExampleFade" class="carousel slide carousel-fade w-50" data-bs-ride="carousel">
+                <div class="carousel-inner testimonios">
+                    <div class="carousel-item active ">
+                        <img src="./medios/testimonios/testimonio1.png" class="d-block w-100 bg-body "
+                            data-bs-interval="10000" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./medios/testimonios/testimonio2.png" class="d-block w-100 bg-body"
+                            data-bs-interval="10000" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./medios/testimonios/testimonio3.png" class="d-block w-100 bg-body"
+                            data-bs-interval="10000" alt="...">
+                    </div>
                 </div>
-              </div>
+            </div>
 
 
 
