--- a/pages/clases.html
+++ b/pages/clases.html
@@ -22,7 +22,7 @@
 
         <nav class="navbar navbar-expand-lg ">
             <div class="logo">
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="..index.html">
                     <img src="../medios/logo.png" alt="Logo" width="40" class="">
                     Salud Nueva Era
                 </a>
