--- a/pages/cuenta.html
+++ b/pages/cuenta.html
@@ -21,7 +21,7 @@
 
         <nav class="navbar navbar-expand-lg ">
             <div class="logo">
-                <a class="navbar-brand" href="..index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img src="../medios/logo.png" alt="Logo" width="40" class="">
                     Salud Nueva Era
                 </a>
