--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- css propio -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/png" href="./medios/logo.png">
 
 
     <title>Salud de la Nueva Era
